# sparky

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  test.txt
benches/: lexer.rs  lexical.rs  parse.rs
compiler/sparky_arena/: Cargo.toml
compiler/sparky_arena/src/: arena.rs  lib.rs
compiler/sparky_ast/: Cargo.toml
compiler/sparky_diagnostic/: Cargo.toml
compiler/sparky_parse/: Cargo.toml
compiler/sparky_parse/src/: lib.rs  tok.rs
compiler/sparky_span/: Cargo.toml
compiler/sparky_span/src/: files.rs  lib.rs  line.rs
doc/: grammar.md  structure.md  syntax.ebnf  user-types.md
doc/spec/0.1.0/: exprs.md
doc/std/: README.md
doc/std/alloc/: alloc.md
doc/std/io/: fs.md  term.md
spark/: README.md  elf.s  main.sprk  package.json
spark-test/: elf.s  main.sprk
spark-test/mod/: mod.sprk
spark-test/std/: std.sprk
spark-test/std/alloc/: alloc.sprk
spark-test/std/bytebuf/: buf.sprk
spark-test/std/io/: io.sprk
spark-test/std/libc/: libc.sprk
spark-test/std/res/: res.sprk
spark-test/std/slice/: slice.sprk
spark-test/std/vec/: vec.sprk
spark/sparkc/lex/: lexer.sprk  tok.sprk
spark/syntaxes/: spark.tmLanguage.json
sparky/: Cargo.toml
sparky-lib/: Cargo.toml
sparky-lib/src/: lib.rs
sparky/src/: args.rs  main.rs
src/: arena.rs  ast.rs  code.rs  error.rs  lex.rs  lib.rs  main.rs  namespace.rs  parse.lalrpop  parse.rs  parser.rs  types.rs
src/backend/: mod.rs
src/code/: linker.rs  llvm.rs  mod.rs  ns.rs
src/codegen/: ir.rs  lower.rs  mod.rs
src/error/: mod.rs
src/ir/: generic.rs  lower.rs  mod.rs  types.rs  value.rs
src/llvm/: expr.rs  mod.rs  stmt.rs
src/parse/: lex.rs  mod.rs  token.rs
src/sparkyc/: Cargo.toml
src/util/: files.rs  loc.rs  mod.rs
std/: test.sprk
std/alloc/: root.sprk
std/common/: constants.sprk
std/io/: root.sprk
std/str/: null.sprk  root.sprk  slice.sprk
std/test/: main.sprk
std/win/: root.sprk
std/windows/: root.sprk  types.sprk
syntax/: sprk.vim
syntax/spark/: README.md  language-configuration.json  package.json
(+49 files in other folders)
