[package]
name = "spark"
version = "0.1.0"
authors = ["Bendi11 <bkliebmann@gmail.com>"]
edition = "2018"


[dependencies]
smallvec = "1.7" # Stack / heap allocated vector types to improve performance
internment = "0.5" # String and type interning
quickscope = "0.1" # ScopeMap

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }


[profile.release]
codegen-units = 1
# lto = true
panic = 'abort'


[profile.bench]
lto = true
codegen-units = 1
