[package]
name = "spark"
version = "0.12.0"
authors = ["Bendi11 <bkliebmann@gmail.com>"]
edition = "2018"

[lib]
name = "spark"
path = "src/lib.rs"

[[bin]]
name = "sparkc"
path = "src/bin/sparkc.rs"


[dependencies]
bitflags = "1.3" # Used to store attributes of AST nodes
smallvec = "1.7" # Stack / heap allocated vector types to improve performance
internment = "0.5" # String and type interning
num-bigint = "0.4" # Big integers for number literals
quickscope = "0.1" # ScopeMap
hashbrown = "0.11" # Non-secure fast hashmap
clap = "3.0"

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }


[profile.release]
codegen-units = 1
# lto = true
panic = 'abort'


